change to positiveInteger binding, returning a BigInteger
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@22524 e5c1c795-43da-0310-a71f-fac65c449510